# atg-scanner

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_20260702.py  run_20260703.py  run_20260705.py  run_live_20260520.py  run_live_20260604.py  run_live_20260607.py  run_live_20260608.py  run_live_20260611.py  run_live_20260612.py  run_live_20260616.py  run_live_20260620.py  run_live_20260626.py  run_live_20260709.py  run_live_20260715.py  run_live_20260718.py  run_today.py
app/: __init__.py  config.py  db.py  deduper.py  digest.py  gmail_client.py  listing.py  main.py  pipeline.py  utils.py
app/parsers/: __init__.py  aef.py  alterra.py  argus_storage.py  b_and_e.py  base.py  crexi.py  energea.py  energynet.py  generic_broker.py  hanley.py  hayden_outdoors.py  levelten.py  loopnet.py  matthews.py  mewbourne.py  northmarq.py  og_clearinghouse.py  pdf_om.py  rv_storage_broker.py  sands_ig.py  skyview.py  snyder_carlton.py  sol_systems.py  storage_group.py  zenith_ios.py
app/scorers/: __init__.py  base.py  carwash_nnn.py  ios.py  msa_commercial.py  msa_commercial_thesis.yaml  oil_gas_wi.py  self_storage.py  solar.py
apps_script/: atg_digest_autosender.gs
data/: draft_preview.html  draft_request.json  staged_listings.json  staged_listings_scored.json
scripts/: run_daily_bridge.py
tests/: conftest.py  test_all_parsers_smoke.py  test_carwash_scorer.py  test_dedup.py  test_msa_commercial_scorer.py  test_parsers_real.py  test_pdf_om_extractor.py  test_pipeline.py  test_smoke.py
